--- a/global.css
+++ b/global.css
@@ -4,6 +4,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Days+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Goblin+One&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Newsreader:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Recursive:wght@600&display=swap');
 
 html, body {
 	position: relative;
